src/tests/cases/snapshots/excise__tests__cases__ui__move_up_and_enter_folder.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/move_up_and_enter_folder  ◆ COMPLETE                                                                                                                               
 allocated ##.#K   reclaim ##.#K   apparent 24.0K   4 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬────────────────────────┤│Select an entry for identity,     │
││                                                                                                                              │                        ││bounds, state, and actions.       │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                 subfolder1/ (+1 descendants)                                                 │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                         12.0K (50%)                                                          │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │         file2          ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │       4.0K (17%)       ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
│├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                            file3                                                             │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                          8.0K (33%)                                                          │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
││                                                                                                                              │                        ││                                  │
└┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
