src/tests/cases/snapshots/excise__tests__cases__ui__noop_when_entering_file-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/noop_when_entering_file  ◆ COMPLETE                                                                                                                                
 allocated ##.#K   reclaim ##.#K   apparent 20.0K   3 entries                                                                                                                                 
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────┤│file2                             │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││◆ COMPLETE · file                 │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││allocated #.#K                    │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││reclaim   #.#K                    │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││apparent 8.0K · entries 0         │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││identity  Inode[...]ber: ######## │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││}                                 │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││links     1 · s[...]              │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││materialized                      │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││██████████████████████████████████████████████████████████file2██████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││███████████████████████████████████████████████████████8.0K (40%)████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│            file1            ││                                  │
││█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████│                             ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                             ││                                  │
││                                                                                                                         │         4.0K (20%)          ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                          file3                                                          │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                       8.0K (40%)                                                        │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
││                                                                                                                         │                             ││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
